@@ -17,10 +17,12 @@ with warnings.catch_warnings():
                         symbol_r2python=dplyr._symbol_r2python,
                         symbol_resolve=dplyr._symbol_resolve)
 
-TARGET_VERSION = '0.8.3'
-if dplyr.__version__ != TARGET_VERSION:
-    warnings.warn('This was designed againt dplyr version %s but you have %s' %
-                  (TARGET_VERSION, dplyr.__version__))
+TARGET_VERSION = '0.8.'
+if not dplyr.__version__.startswith(TARGET_VERSION):
+    warnings.warn(
+        'This was designed againt dplyr versions starting with %s'
+        ' but you have %s' %
+        (TARGET_VERSION, dplyr.__version__))
 
 StringInEnv = namedtuple('StringInEnv', 'string env')
 
